<resources>
    <string name="app_name">Gemift</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="welcome_to_gemift">Welcome to Gemift</string>
    <string name="Email">Email</string>
    <string name="group_name">Group Name</string>
    <string name="Submit">Submit</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password"><u>Forgot Password ?</u></string>
    <string name="forgot_password1">Forgot Password ?</string>
    <string name="need_an_account">Need an account?</string>
    <string name="signup">Sign Up</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="it_make_take">It make take several minutes to receive a password reset email and make sure your check junk mail.</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="change_password">Change Password</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_password">New Password</string>
    <string name="current_password">Current Password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contact">Contact</string>
    <string name="friend">10 Friends</string>
    <string name="occassion">5 Occasion</string>
    <string name="add_friend">Add Friend</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="verification_code">Verification Code</string>
    <string name="sms_verification_has_been_sent_to">SMS Verification has been sent to:</string>
    <string name="didn_t_reciceve_the_code">Didn\'t reciceve the code?</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="login_with_mail_id"><u>Login with Mail Id</u></string>
    <string name="circle_name">Circle Name</string>
    <string name="secret_friend_age">Secret friend age*</string>
    <string name="create_custom_interest"><u>Create Custom Interest</u></string>
    <string name="skip"><u>Skip</u></string>

    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="hello">Hello,</string>
    <string name="user_name">User Name</string>
    <string name="text_welcome">Get ready to celebrate here the \n upcoming occasions</string>
    <string name="more_occations">More Occations</string>
    <string name="friend_name">Friend Name</string>
    <string name="wedding_day">Wedding Day</string>
    <string name="select_few_gift_to_buy_later">Select few gift to buy later</string>
    <string name="pick_up">Pickup now</string>
    <string name="buy_now">Buy now</string>
    <string name="fun_started">Show the stats...</string>
    <string name="how_much">How much do you know your secret friend?</string>
    <string name="friend_score">Friend circle score</string>
    <string name="your_score">your score</string>
    <string name="keep_learning">Keep learning</string>
    <string name="add_subcategories">Add SubCategories</string>
    <string name="choose_gift">Vote now</string>
    <string name="poke_group">Poke Group</string>
    <string name="no_transaction">No Transactions  available now</string>
</resources>