<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screenBG"
    android:orientation="vertical"
    tools:context=".Ui.LoginActivity.LoginScreen">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_50">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="300dp"
                android:layout_height="@dimen/margin_150"
                android:layout_margin="@dimen/margin_10"
                android:src="@drawable/gemmift_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_10"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/welcome_to_gemift"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/margin_20"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_10"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/login"
                android:textAlignment="center"
                android:textColor="@color/text_color"
                android:textSize="@dimen/textSize_22"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_20"
                android:layout_marginTop="10dp"
                android:layout_marginRight="@dimen/margin_20"
                android:hint="@string/Email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/barlow"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/text_color"
                    android:textSize="18dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_20"
                android:layout_marginTop="10dp"
                android:layout_marginRight="@dimen/margin_20"
                android:hint="@string/password"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/barlow"
                    android:inputType="textPassword"
                    android:textColor="@color/text_color"
                    android:textSize="18dp" />
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/btn_proceed"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/border"
                android:backgroundTint="@color/colorPrimaryDark"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:backgroundTint="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/txt_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_10"
                android:fontFamily="@font/barlow"
                android:text="@string/forgot_password"
                android:textAlignment="center"
                android:textColor="@color/text_color"
                android:textSize="@dimen/margin_16"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


        </LinearLayout>
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/margin_15">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_10"
                android:fontFamily="@font/barlow"
                android:text="@string/need_an_account"
                android:textAlignment="center"
                android:textColor="@color/text_color"
                android:textSize="@dimen/margin_20"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btn_signup"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_5"
                android:background="@drawable/border"
                android:backgroundTint="@color/colorPrimaryDark"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/signup"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:backgroundTint="@color/colorPrimaryDark" />


        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>